--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,55 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="xyz.smaeul.xisalone.MainActivity">
 
+    <TextView
+        android:id="@+id/text_anchor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="16dp"
+        android:text="=" />
+
+    <View
+        android:id="@+id/left_bar"
+        style="@style/Divider"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/text_anchor" />
+
+    <View
+        android:id="@+id/right_bar"
+        style="@style/Divider"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/text_anchor" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/left_bar"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@id/text_anchor"
+        android:text="topleft" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/left_bar"
+        android:layout_toLeftOf="@id/text_anchor"
+        android:text="botleft" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/right_bar"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/text_anchor"
+        android:text="topright" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/right_bar"
+        android:layout_toRightOf="@id/text_anchor"
+        android:text="botright" />
 </RelativeLayout>
