This directive did nothing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:foregroundGravity="right">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/number_stack"
