Factor out touch listener into a separate class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="÷" />
+        android:text="undef" />
 
     <ImageButton
         android:layout_width="wrap_content"
