--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/navyBlue"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,83 +11,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="xyz.smaeul.xisalone.MainActivity">
 
-    <HorizontalScrollView
+    <Button
+        android:background="@color/navyHighlight"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:textSize="20pt"
+        android:text="@string/new_game"
+        android:textAllCaps="false"
+        android:onClick="startGame">
+    </Button>
 
-        <LinearLayout
-            android:id="@+id/number_stack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
-    </HorizontalScrollView>
-
-    <TextView
-        android:id="@+id/anchor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="16dp"
-        android:text="=" />
-
-    <View
-        android:id="@+id/left_bar"
-        style="@style/Divider"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/anchor" />
-
-    <TextView
-        android:id="@+id/left_numerator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/left_bar"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/anchor"/>
-
-    <TextView
-        android:id="@+id/left_denominator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/left_bar"
-        android:layout_toLeftOf="@id/anchor"/>
-
-    <View
-        android:id="@+id/right_bar"
-        style="@style/Divider"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/anchor" />
-
-    <TextView
-        android:id="@+id/right_numerator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/right_bar"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/anchor"/>
-
-    <TextView
-        android:id="@+id/right_denominator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/right_bar"
-        android:layout_toRightOf="@id/anchor"/>
-
-    <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:onClick="undo"
-        android:src="@android:drawable/ic_menu_revert" />
-
-    <TextView
-        android:id="@+id/operation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/anchor"
-        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
