--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="navyBlue">#003366</color>
+    <color name="navyHighlight">#336699</color>
+    <color name="white">#FFF</color>
     <color name="ghost">#00000000</color>
 </resources>
