--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorPrimary">@color/navyBlue</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textViewStyle">@style/DefaultTextViewStyle</item>
     </style>
 
     <style name="DefaultTextViewStyle" parent="android:Widget.TextView">
@@ -15,7 +16,7 @@
     </style>
 
     <style name="Divider">
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@color/navyHighlight</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">4dp</item>
         <item name="android:layout_marginBottom">4dp</item>
