--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -8,6 +8,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/navyBlue"
     tools:context="xyz.smaeul.xisalone.OptionsActivity">
+
+    <CheckBox
+
+        android:id="@+id/checkbox_controls"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/alt_controls"
+        android:onClick="toggleControls"
+        style="@style/OptionsCheckBox"/>
 
 </RelativeLayout>
